2024-01-21T16:18:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7602407325 # 44
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-21
* notice: last 14d: unq all: 2 18
* notice: prev accum: outdated-unq outdated-all / unq all: 842 1540 / 854 1558
* notice: next accum: outdated-unq outdated-all / unq all: 843 1541 / 854 1559
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2024-01-07] / [2024-01-21]

2024-01-21T08:18:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7599988402 # 43
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-21
* notice: last 14d: unq all: 2 18
* notice: prev accum: outdated-unq outdated-all / unq all: 842 1540 / 853 1557
* notice: next accum: outdated-unq outdated-all / unq all: 842 1540 / 854 1558
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-21]

2024-01-20T16:19:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7595492567 # 41
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-20
* notice: last 14d: unq all: 2 17
* notice: prev accum: outdated-unq outdated-all / unq all: 842 1540 / 853 1556
* notice: next accum: outdated-unq outdated-all / unq all: 842 1540 / 853 1557
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-01-20]

2024-01-20T08:18:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7593201676 # 40