@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-01-21T16:18:53Z",
+  "timestamp" : "2024-01-22T08:21:23Z",
   "count_outdated" : 1541,
   "uniques_outdated" : 843,
-  "count" : 1559,
-  "uniques" : 854,
+  "count" : 1560,
+  "uniques" : 855,
   "clones" : [
     {
       "timestamp": "2024-01-08T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -91,6 +91,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
