@@ -1,3 +1,12 @@
+2024-01-22T08:21:23Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7608300516 # 46
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-22
+* notice: last 14d: unq all: 2 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 843 1541 / 854 1559
+* notice: next accum: outdated-unq outdated-all / unq all: 843 1541 / 855 1560
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-01-08 2024-01-22]
+
 2024-01-21T16:18:53Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7602407325 # 44
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-21
